Some update to activities and layout

--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -13,8 +13,8 @@
         android:layout_height="44dp"
         android:layout_marginTop="244dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_baseline_email_24"
-        android:drawableLeft="@drawable/ic_baseline_email_24"
+        android:drawableStart="@drawable/email"
+        android:drawableLeft="@drawable/email"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Email"
@@ -33,8 +33,8 @@
         android:layout_height="44dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_baseline_lock_24"
-        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        android:drawableStart="@drawable/lock"
+        android:drawableLeft="@drawable/lock"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Password"
