--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -26,8 +26,8 @@
         android:layout_height="44dp"
         android:layout_marginTop="216dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_baseline_emoji_emotions_24"
-        android:drawableLeft="@drawable/ic_baseline_emoji_emotions_24"
+        android:drawableStart="@drawable/emoji_emotions"
+        android:drawableLeft="@drawable/emoji_emotions"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Name"
@@ -44,8 +44,8 @@
         android:layout_height="44dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_baseline_email_24"
-        android:drawableLeft="@drawable/ic_baseline_email_24"
+        android:drawableStart="@drawable/email"
+        android:drawableLeft="@drawable/email"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Email"
@@ -62,8 +62,8 @@
         android:layout_height="44dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_baseline_lock_24"
-        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        android:drawableStart="@drawable/lock"
+        android:drawableLeft="@drawable/lock"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Password"
@@ -81,8 +81,8 @@
         android:layout_height="44dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_baseline_lock_24"
-        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        android:drawableStart="@drawable/lock"
+        android:drawableLeft="@drawable/lock"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Confirm password"
