--- a/app/src/main/res/layout/workout_card_layout.xml
+++ b/app/src/main/res/layout/workout_card_layout.xml
@@ -15,7 +15,7 @@
         app:cardCornerRadius="20dp"
         app:cardElevation="12dp"
         app:contentPadding="14dp"
-        android:layout_margin="14dp"
+        android:layout_margin="18dp"
         android:layout_gravity="center" >
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -42,8 +42,18 @@
                 android:fontFamily="@font/seguisb"
                 android:text="Description"
                 android:textSize="18sp"
+                android:textStyle="italic"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/workoutTitle" />
+
+            <TextView
+                android:id="@+id/equipment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/dumbell"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
