--- a/app/src/main/res/layout/premium_fragment.xml
+++ b/app/src/main/res/layout/premium_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.premium.PremiumFragment">
+    tools:context=".activities.mainactivity.premium.PremiumFragment">
 
     <TextView
         android:id="@+id/text_premium"
