--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -9,7 +9,7 @@
 
     <EditText
         android:id="@+id/emailEditText"
-        android:layout_width="268dp"
+        android:layout_width="300dp"
         android:layout_height="44dp"
         android:layout_marginTop="244dp"
         android:background="@drawable/custom_input"
@@ -17,11 +17,13 @@
         android:drawableLeft="@drawable/email"
         android:drawablePadding="10dp"
         android:ems="10"
+        android:fontFamily="@font/seguisb"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +31,7 @@
 
     <EditText
         android:id="@+id/confirmPasswordEditText"
-        android:layout_width="265dp"
+        android:layout_width="300dp"
         android:layout_height="44dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_input"
@@ -37,10 +39,12 @@
         android:drawableLeft="@drawable/lock"
         android:drawablePadding="10dp"
         android:ems="10"
+        android:fontFamily="@font/seguisb"
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
@@ -51,6 +55,7 @@
         android:layout_height="46dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/custom_login_button"
+        android:fontFamily="@font/seguisb"
         android:text="Log In"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -67,6 +72,7 @@
         android:layout_height="46dp"
         android:layout_marginBottom="72dp"
         android:background="@drawable/custom_login_button"
+        android:fontFamily="@font/seguisb"
         android:text="Register"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -95,11 +101,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:fontFamily="@font/seguisb"
         android:text="Don't you have an Account?\n       Well you can register"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/button_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/errorTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/seguisb"
+        android:textColor="@color/red_error"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_login" />
 
     <TextView
         android:id="@+id/passwordError"
@@ -130,5 +149,16 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/emailEditText"
         app:layout_constraintTop_toBottomOf="@+id/passwordError" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/errorTextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
