--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -22,7 +22,7 @@
 
     <EditText
         android:id="@+id/nameEditText"
-        android:layout_width="270dp"
+        android:layout_width="300dp"
         android:layout_height="44dp"
         android:layout_marginTop="216dp"
         android:background="@drawable/custom_input"
@@ -30,17 +30,19 @@
         android:drawableLeft="@drawable/emoji_emotions"
         android:drawablePadding="10dp"
         android:ems="10"
+        android:fontFamily="@font/seguisb"
         android:hint="Name"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/emailEditText"
-        android:layout_width="270dp"
+        android:layout_width="300dp"
         android:layout_height="44dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/custom_input"
@@ -48,17 +50,19 @@
         android:drawableLeft="@drawable/email"
         android:drawablePadding="10dp"
         android:ems="10"
+        android:fontFamily="@font/seguisb"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
 
     <EditText
         android:id="@+id/passwordEditText"
-        android:layout_width="270dp"
+        android:layout_width="300dp"
         android:layout_height="44dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/custom_input"
@@ -66,10 +70,12 @@
         android:drawableLeft="@drawable/lock"
         android:drawablePadding="10dp"
         android:ems="10"
+        android:fontFamily="@font/seguisb"
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +83,7 @@
 
     <EditText
         android:id="@+id/confirmPasswordEditText"
-        android:layout_width="270dp"
+        android:layout_width="300dp"
         android:layout_height="44dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/custom_input"
@@ -85,10 +91,12 @@
         android:drawableLeft="@drawable/lock"
         android:drawablePadding="10dp"
         android:ems="10"
+        android:fontFamily="@font/seguisb"
         android:hint="Confirm password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,8 +106,9 @@
         android:id="@+id/button_register"
         android:layout_width="216dp"
         android:layout_height="46dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="56dp"
         android:background="@drawable/custom_login_button"
+        android:fontFamily="@font/seguisb"
         android:text="Register"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -161,5 +170,29 @@
         android:visibility="visible"
         app:layout_constraintStart_toEndOf="@+id/confirmPasswordEditText"
         app:layout_constraintTop_toBottomOf="@+id/passwordError" />
+
+    <TextView
+        android:id="@+id/errorTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/seguisb"
+        android:textColor="@color/red_error"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_register" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/errorTextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
