--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -19,8 +19,8 @@
 
     <ImageView
         android:id="@+id/titleLogo"
-        android:layout_width="242dp"
-        android:layout_height="114dp"
+        android:layout_width="216dp"
+        android:layout_height="98dp"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -35,8 +35,22 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:foregroundTint="@color/white"
+        android:indeterminate="true"
         android:indeterminateTint="@color/white"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/errorTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:fontFamily="@font/seguisb"
+        android:textColor="@color/red_error"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
