--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -8,6 +8,7 @@
     tools:context=".activities.mainactivity.home.HomeFragment">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -73,14 +74,6 @@
             android:textSize="18sp"
             android:visibility="gone" />
 
-        <ImageView
-            android:id="@+id/badImageView"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/bad_mood"
-            android:visibility="gone" />
-
         <GridView
             android:id="@+id/grid"
             android:layout_width="wrap_content"
@@ -93,9 +86,7 @@
             android:verticalSpacing="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" >
-
-        </GridView>
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>
 
     </LinearLayout>
 
