Almost completed Home page

--- a/app/src/main/res/layout/workout_card_layout.xml
+++ b/app/src/main/res/layout/workout_card_layout.xml
@@ -26,25 +26,29 @@
 
             <TextView
                 android:id="@+id/workoutTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/seguisb"
                 android:text="Workout Title"
-                android:textSize="22sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:ellipsize="end"
+                android:maxLines="1" />
 
             <TextView
                 android:id="@+id/workoutDescription"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/seguisb"
                 android:text="Description"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:textStyle="italic"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/workoutTitle" />
+                app:layout_constraintTop_toBottomOf="@+id/workoutTitle"
+                android:ellipsize="end"
+                android:maxLines="3" />
 
             <TextView
                 android:id="@+id/equipment"
@@ -53,6 +57,19 @@
                 android:background="@drawable/dumbell"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
+
+            <TextView
+                android:id="@+id/workoutCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:fontFamily="@font/seguisb"
+                android:maxLines="1"
+                android:text="Category"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
