--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/layout_bg"
     tools:context=".activities.mainactivity.home.HomeFragment">
 
     <LinearLayout
@@ -49,7 +49,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/title_home" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/accountImage"
                 android:layout_width="62dp"
                 android:layout_height="62dp"
                 android:layout_alignParentRight="true"
@@ -58,7 +58,8 @@
                 android:layout_marginRight="40dp"
                 android:src="@drawable/account_default"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:clickable="true"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -86,7 +87,8 @@
             android:verticalSpacing="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+        </GridView>
 
     </LinearLayout>
 
