--- a/app/src/main/res/layout/view_schedule_layout.xml
+++ b/app/src/main/res/layout/view_schedule_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/layout_bg"
     tools:context=".activities.mainactivity.home.ViewSchedule">
 
     <TextView
