--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -70,9 +70,11 @@
             android:id="@+id/errorTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="74dp"
             android:fontFamily="@font/seguisb"
             android:gravity="center"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             android:text="TextView"
             android:textColor="@color/red_error"
             android:textSize="18sp"
