--- a/app/src/main/res/layout/view_schedule_layout.xml
+++ b/app/src/main/res/layout/view_schedule_layout.xml
@@ -11,8 +11,6 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginLeft="72dp"
         android:layout_marginTop="40dp"
         android:ellipsize="end"
         android:fontFamily="@font/seguisb"
@@ -22,6 +20,7 @@
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,6 +41,8 @@
         android:layout_width="350dp"
         android:layout_height="422dp"
         android:layout_marginTop="80dp"
+        android:paddingBottom="100dp"
+        android:clipToPadding="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
