--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -24,7 +24,7 @@
         android:id="@+id/nameEditText"
         android:layout_width="300dp"
         android:layout_height="44dp"
-        android:layout_marginTop="216dp"
+        android:layout_marginTop="276dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/emoji_emotions"
         android:drawableLeft="@drawable/emoji_emotions"
@@ -37,34 +37,38 @@
         android:paddingLeft="10dp"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/emailEditText"
+        android:id="@+id/nicknameEditText"
         android:layout_width="300dp"
         android:layout_height="44dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="196dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/email"
-        android:drawableLeft="@drawable/email"
+        android:drawableStart="@drawable/ic_baseline_info_24"
+        android:drawableLeft="@drawable/ic_baseline_info_24"
         android:drawablePadding="10dp"
         android:ems="10"
         android:fontFamily="@font/seguisb"
-        android:hint="Email"
+        android:hint="Nickname"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
         android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.351" />
 
     <EditText
         android:id="@+id/passwordEditText"
         android:layout_width="300dp"
         android:layout_height="44dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/lock"
         android:drawableLeft="@drawable/lock"
@@ -77,7 +81,7 @@
         android:paddingLeft="10dp"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
@@ -85,7 +89,7 @@
         android:id="@+id/confirmPasswordEditText"
         android:layout_width="300dp"
         android:layout_height="44dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/lock"
         android:drawableLeft="@drawable/lock"
@@ -98,7 +102,7 @@
         android:paddingLeft="10dp"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
 
@@ -106,7 +110,7 @@
         android:id="@+id/button_register"
         android:layout_width="216dp"
         android:layout_height="46dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/custom_login_button"
         android:fontFamily="@font/seguisb"
         android:text="Register"
@@ -119,11 +123,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />
 
+    <EditText
+        android:id="@+id/emailEditText"
+        android:layout_width="300dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/email"
+        android:drawableLeft="@drawable/email"
+        android:drawablePadding="10dp"
+        android:ems="10"
+        android:fontFamily="@font/seguisb"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:paddingStart="10dp"
+        android:paddingLeft="10dp"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
+
     <TextView
         android:id="@+id/nameError"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:layout_marginTop="216dp"
+        android:layout_marginTop="276dp"
+        android:textColor="@color/red_error"
+        android:textColorLink="#FFFFFF"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintStart_toEndOf="@+id/nameEditText"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/nicknameError"
+        android:layout_width="wrap_content"
+        android:layout_height="44dp"
+        android:layout_marginTop="208dp"
         android:textColor="@color/red_error"
         android:textColorLink="#FFFFFF"
         android:textSize="18sp"
@@ -162,7 +200,7 @@
         android:id="@+id/confirmPasswordError"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/red_error"
         android:textColorLink="#FFFFFF"
         android:textSize="18sp"
