--- a/app/src/main/res/layout/exercise_row_layout_list.xml
+++ b/app/src/main/res/layout/exercise_row_layout_list.xml
@@ -30,8 +30,9 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/seguisb"
-        android:text="Weight: "
+        android:text="Equipment"
         android:textSize="16sp"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
@@ -39,13 +40,14 @@
         android:id="@+id/category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
         android:fontFamily="@font/seguisb"
         android:gravity="center"
-        android:text="R X S"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="CATEGORY"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
