Added RecyclerView and completed popup to add exercise
still working on recycler view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,12 @@
     <color name="arms_color">#e74c3c</color>
     <color name="back_color">#d35400</color>
     <color name="chest_color">#27ae60</color>
+    <color name="light_grey">#F2F2F2</color>
+
+    <color name="slider_background">#FEA500</color>
+    <array name="gradient">
+        <item>#FFFFFFFF</item>
+        <item>#C2C5CC</item>
+        <item>#FF000000</item>
+    </array>
 </resources>
