--- a/app/src/main/res/layout/add_schedule.xml
+++ b/app/src/main/res/layout/add_schedule.xml
@@ -36,19 +36,16 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <GridView
-        android:id="@+id/grid"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginTop="220dp"
-        android:horizontalSpacing="4dp"
-        android:listSelector="@android:color/transparent"
-        android:numColumns="2"
-        android:padding="0dp"
-        android:verticalSpacing="4dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/exercise_view"
+        android:layout_width="match_parent"
+        android:layout_height="530dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"></GridView>
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintVertical_bias="1.0" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_exercise"
@@ -64,38 +61,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.962" />
 
+
     <TextView
         android:id="@+id/errorTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="74dp"
         android:fontFamily="@font/seguisb"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="TextView"
         android:textColor="@color/red_error"
-        android:textSize="18sp"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/imageView4"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
-        app:layout_constraintVertical_bias="0.793" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.247" />
 
-    <!--GridView
-        android:id="@+id/grid"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginTop="24dp"
-        android:horizontalSpacing="4dp"
-        android:listSelector="@android:color/transparent"
-        android:numColumns="2"
-        android:padding="0dp"
-        android:verticalSpacing="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
-    </GridView-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
