Added addSchedule view
Rimane bug per il quale bisogna refreshare la home

--- a/app/src/main/res/layout/add_schedule.xml
+++ b/app/src/main/res/layout/add_schedule.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/layout_bg"
     tools:context=".activities.schedules.CreateScheduleActivity"
-    android:theme="@android:style/Theme.NoTitleBar">
+    >
 
 
 
@@ -33,19 +33,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/exercise_view"
         android:layout_width="match_parent"
-        android:layout_height="530dp"
+        android:layout_height="496dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_margin="23dp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_exercise"
@@ -61,6 +61,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.962" />
 
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/save_schedule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:backgroundTint="#2ecc71"
+        android:scaleType="center"
+        android:src="@drawable/ic_baseline_save_alt_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.841"
+        app:maxImageSize="32dp" />
 
     <TextView
         android:id="@+id/errorTextView"
