--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,9 @@
         <item name="android:windowCloseOnTouchOutside">true</item>
     </style>
 
+    <style name="editStyle">
+        <item name="android:textStyle">italic</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
 </resources>
