--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="light_grey">#F2F2F2</color>
     <color name="light_orange">#ffd699</color>
     <color name="slider_background">#FEA500</color>
+    <color name="pale_green">#2ecc71</color>
     <array name="gradient">
         <item>#FFFFFFFF</item>
         <item>#C2C5CC</item>
