Risolto bug delle CardView nella home

--- a/app/src/main/res/layout/workout_card_layout.xml
+++ b/app/src/main/res/layout/workout_card_layout.xml
@@ -21,34 +21,34 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/workoutTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:fontFamily="@font/seguisb"
+                android:maxLines="1"
                 android:text="Workout Title"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:ellipsize="end"
-                android:maxLines="1" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/workoutDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:fontFamily="@font/seguisb"
+                android:maxLines="3"
                 android:text="Description"
                 android:textSize="14sp"
                 android:textStyle="italic"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/workoutTitle"
-                android:ellipsize="end"
-                android:maxLines="3" />
+                app:layout_constraintTop_toBottomOf="@+id/workoutTitle" />
 
             <TextView
                 android:id="@+id/equipment"
@@ -62,14 +62,18 @@
                 android:id="@+id/exerciseCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="4dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/seguisb"
                 android:maxLines="1"
                 android:text="Category"
-                android:textSize="16sp"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                android:textSize="14sp"
+                app:layout_constraintBottom_toTopOf="@+id/workoutCategory2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/workoutDescription"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/workoutCategory2"
@@ -80,13 +84,9 @@
                 android:maxLines="1"
                 android:text="Category"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.079"
-                app:layout_constraintStart_toEndOf="@+id/exerciseCategory"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintStart_toStartOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
