--- a/app/src/main/res/layout/add_schedule.xml
+++ b/app/src/main/res/layout/add_schedule.xml
@@ -36,7 +36,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listOfExercises"
+        android:id="@+id/allExercises"
         android:layout_width="match_parent"
         android:layout_height="496dp"
         app:layout_constraintBottom_toBottomOf="parent"
