--- a/app/src/main/res/layout/view_schedule_layout.xml
+++ b/app/src/main/res/layout/view_schedule_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/layout_bg"
+    android:background="@drawable/background"
     tools:context=".activities.mainactivity.home.ViewSchedule">
 
     <TextView
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listOfExercises"
+        android:id="@+id/allExercises"
         android:layout_width="350dp"
         android:layout_height="422dp"
         android:layout_marginTop="80dp"
