--- a/app/src/main/res/layout/intro_layout.xml
+++ b/app/src/main/res/layout/intro_layout.xml
@@ -43,7 +43,7 @@
         app:srcCompat="@drawable/arrow_forward" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/exerciseTitle"
         android:layout_width="wrap_content"
         android:layout_height="46dp"
         android:layout_marginEnd="8dp"
